test/should-pass/fail/read-only-klass-ptrs-object/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass object;

int-t main() {
  object::klass = nullptr; // this should fail

  return 0;
}
